--- a/tickets/templates/administracion/admin.html
+++ b/tickets/templates/administracion/admin.html
@@ -53,7 +53,7 @@
                             <h5 id="dCodigo" hidden>{{ departamento.codigoDepartamento }}</h5>
                             <h5 id="dSiglas" hidden>{{ departamento.siglasDepartamento }}</h5>
                             <h5 id="dCitas" hidden>{{ departamento.citasDepartamento }}</h5>
-                            <h5 id="dNoti" hidden>{{ departamento.notificacionDepartamento }}</h5>
+                            <h5 id="dNoti" hidden>{{ departamento.notiDepartamento }}</h5>
                         </td>
                         <td class="text-center align-middle">
                             <button type="button" data-bs-toggle="modal" data-bs-target="#modal_departamento"
